adding button color and making premium tubs and scoops page responsive

--- a/scoops.html
+++ b/scoops.html
@@ -17,20 +17,64 @@
   <script src="index.js"></script>
 
   <style>
-    @media (max-width:800px)
+    @media (max-width:768px) and (min-width:503px)
     {
       .footers
       {
         margin-top:3100px;
       }
     }
-    @media (max-width:360px)
+    @media (max-width:503px) and (min-width:465px)
+    {
+      .footers
+      {
+        margin-top:2500px;
+      }
+    }
+    @media (max-width:464px) and (min-width:413px)
+    {
+      .footers
+      {
+        margin-top:1900px;
+      }
+    }
+    @media (max-width:412px) and (min-width:347px)
+    {
+      .footers
+      {
+        margin-top:2000px;
+      }
+    }
+    @media (max-width:347px) and (min-width:300px)
     {
       .footers
       {
         margin-top:1200px;
       }
     }
+    @media (max-width:300px) and (min-width:274px)
+    {
+      .footers
+      {
+        margin-top:1300px;
+      }
+    }
+    @media (max-width:273px) and (min-width:0px)
+    {
+      .footers
+      {
+        margin-top:200px;
+      }
+    }
+    @media  (max-width:953px) and (min-width:769px)
+    {
+      .footers
+      {
+        margin-top:250px;
+      }
+    }
+   
+   
   </style>
 </head>
 
@@ -221,7 +265,8 @@
                       </div>
                       <h3 class="mb-0 font-weight-semibold">₹ 150</h3>
                       <div> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> </div>
-                      <div class="text-muted mb-3">98 reviews</div> <button type="button" class="btn bg-cart"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
+                      <div class="text-muted mb-3">98 reviews</div> <button type="button" class="btn bg-cart" style = " background-color: orange;
+    color: #fff;"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
                   </div>
               </div>
           </div>
@@ -236,7 +281,8 @@
                       </div>
                       <h3 class="mb-0 font-weight-semibold">₹ 135</h3>
                       <div> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> </div>
-                      <div class="text-muted mb-3">62 reviews</div> <button type="button" class="btn bg-cart"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
+                      <div class="text-muted mb-3">62 reviews</div> <button type="button" class="btn bg-cart" style = " background-color: orange;
+    color: #fff;"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
                   </div>
               </div>
           </div>
@@ -251,7 +297,8 @@
                       </div>
                       <h3 class="mb-0 font-weight-semibold">₹ 170</h3>
                       <div> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> </div>
-                      <div class="text-muted mb-3">102 reviews</div> <button type="button" class="btn bg-cart"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
+                      <div class="text-muted mb-3">102 reviews</div> <button type="button" class="btn bg-cart" style = " background-color: orange;
+    color: #fff;"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
                   </div>
               </div>
           </div>
@@ -266,7 +313,8 @@
                       </div>
                       <h3 class="mb-0 font-weight-semibold">₹ 200</h3>
                       <div> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> </div>
-                      <div class="text-muted mb-3">56 reviews</div> <button type="button" class="btn bg-cart"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
+                      <div class="text-muted mb-3">56 reviews</div> <button type="button" class="btn bg-cart" style = " background-color: orange;
+    color: #fff;"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
                   </div>
               </div>
           </div>
@@ -281,7 +329,8 @@
                       </div>
                       <h3 class="mb-0 font-weight-semibold">₹ 105</h3>
                       <div> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> </div>
-                      <div class="text-muted mb-3">97 reviews</div> <button type="button" class="btn bg-cart"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
+                      <div class="text-muted mb-3">97 reviews</div> <button type="button" class="btn bg-cart" style = " background-color: orange;
+    color: #fff;"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
                   </div>
               </div>
           </div>
@@ -296,7 +345,8 @@
                       </div>
                       <h3 class="mb-0 font-weight-semibold">₹ 140</h3>
                       <div> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> </div>
-                      <div class="text-muted mb-3">115 reviews</div> <button type="button" class="btn bg-cart"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
+                      <div class="text-muted mb-3">115 reviews</div> <button type="button" class="btn bg-cart" style = " background-color: orange;
+    color: #fff;"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
                   </div>
               </div>
           </div>
