--- a/premium-tubs.html
+++ b/premium-tubs.html
@@ -17,18 +17,60 @@
   <script src="index.js"></script>
 
   <style>
-    @media (max-width:800px)
+    @media (max-width:769px) and (min-width:575px)
     {
       .footers
       {
-        margin-top:3100px;
+        margin-top:5200px;
       }
     }
-    @media (max-width:360px)
+    @media (max-width:574px) and (min-width:515px)
     {
       .footers
       {
-        margin-top:1200px;
+        margin-top:5100px;
+      }
+    }
+    @media (max-width:514px) and (min-width:439px)
+    {
+      .footers
+      {
+        margin-top:4600px;
+      }
+    }
+    @media (max-width:438px) and (min-width:365px)
+    {
+      .footers
+      {
+        margin-top:3800px;
+      }
+    }
+    @media (max-width:364px) and (min-width:280px)
+    {
+      .footers
+      {
+        margin-top:2800px;
+      }
+    }
+    @media (max-width:279px) and (min-width:150px)
+    {
+      .footers
+      {
+        margin-top:1150px;
+      }
+    }
+    @media (max-width:151px) and (min-width:0px)
+    {
+      .footers
+      {
+        margin-top:1250px;
+      }
+    }
+    @media (max-width:945px) and (min-width:770px)
+    {
+      .footers
+      {
+        margin-top:750px;
       }
     }
   </style>
@@ -65,7 +107,7 @@
               Products
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="premium-tubs.html"> Premium tubs</a></li>
+              <li><a class="dropdown-item active" href="#"> Premium tubs</a></li>
               <li><a class="dropdown-item" href="treat-Cones.html">Treat Cones</a></li>
               <li>
                 <hr class="dropdown-divider">
@@ -75,7 +117,7 @@
               <li>
                 <hr class="dropdown-divider">
               </li>
-              <li><a class="dropdown-item active" href="#">Scoops</a></li>
+              <li><a class="dropdown-item " href="scoops.html">Scoops</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -221,7 +263,8 @@
                       </div>
                       <h3 class="mb-0 font-weight-semibold">₹ 334</h3>
                       <div> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> </div>
-                      <div class="text-muted mb-3">90 reviews</div> <button type="button" class="btn bg-cart"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
+                      <div class="text-muted mb-3">90 reviews</div> <button type="button" class="btn bg-cart" style=" background-color: orange;
+                      color: #fff;"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
                   </div>
               </div>
           </div>
@@ -236,7 +279,8 @@
                       </div>
                       <h3 class="mb-0 font-weight-semibold">₹ 334</h3>
                       <div> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> </div>
-                      <div class="text-muted mb-3">87 reviews</div> <button type="button" class="btn bg-cart"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
+                      <div class="text-muted mb-3">87 reviews</div> <button type="button" class="btn bg-cart"style = " background-color: orange;
+    color: #fff;"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
                   </div>
               </div>
           </div>
@@ -251,7 +295,8 @@
                       </div>
                       <h3 class="mb-0 font-weight-semibold">₹ 381</h3>
                       <div> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> </div>
-                      <div class="text-muted mb-3">105 reviews</div> <button type="button" class="btn bg-cart"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
+                      <div class="text-muted mb-3">105 reviews</div> <button type="button" class="btn bg-cart"style = " background-color: orange;
+    color: #fff;"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
                   </div>
               </div>
           </div>
@@ -266,7 +311,8 @@
                       </div>
                       <h3 class="mb-0 font-weight-semibold">₹ 358</h3>
                       <div> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> </div>
-                      <div class="text-muted mb-3">60 reviews</div> <button type="button" class="btn bg-cart"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
+                      <div class="text-muted mb-3">60 reviews</div> <button type="button" class="btn bg-cart"style = " background-color: orange;
+    color: #fff;"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
                   </div>
               </div>
           </div>
@@ -281,7 +327,8 @@
                       </div>
                       <h3 class="mb-0 font-weight-semibold">₹ 358</h3>
                       <div> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> </div>
-                      <div class="text-muted mb-3">97 reviews</div> <button type="button" class="btn bg-cart"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
+                      <div class="text-muted mb-3">97 reviews</div> <button type="button" class="btn bg-cart"style = " background-color: orange;
+    color: #fff;"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
                   </div>
               </div>
           </div>
@@ -296,7 +343,8 @@
                       </div>
                       <h3 class="mb-0 font-weight-semibold">₹ 358</h3>
                       <div> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> </div>
-                      <div class="text-muted mb-3">115 reviews</div> <button type="button" class="btn bg-cart"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
+                      <div class="text-muted mb-3">115 reviews</div> <button type="button" class="btn bg-cart"style = " background-color: orange;
+    color: #fff;"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
                   </div>
               </div>
           </div>
@@ -312,7 +360,8 @@
                       </div>
                       <h3 class="mb-0 font-weight-semibold">₹ 358</h3>
                       <div> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> </div>
-                      <div class="text-muted mb-3">115 reviews</div> <button type="button" class="btn bg-cart"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
+                      <div class="text-muted mb-3">115 reviews</div> <button type="button"  id = "bts"class="btn bg-cart"style = " background-color: orange;
+    color: #fff;"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
                   </div>
               </div>
           </div>
@@ -328,7 +377,8 @@
                       </div>
                       <h3 class="mb-0 font-weight-semibold">₹ 334</h3>
                       <div> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> </div>
-                      <div class="text-muted mb-3">115 reviews</div> <button type="button" class="btn bg-cart"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
+                      <div class="text-muted mb-3">115 reviews</div> <button type="button" class="btn bg-cart"style = " background-color: orange;
+    color: #fff;"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
                   </div>
               </div>
           </div>
@@ -344,7 +394,8 @@
                       </div>
                       <h3 class="mb-0 font-weight-semibold">₹ 358</h3>
                       <div> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> </div>
-                      <div class="text-muted mb-3">115 reviews</div> <button type="button" class="btn bg-cart"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
+                      <div class="text-muted mb-3">115 reviews</div> <button type="button" class="btn bg-cart"style = " background-color: orange;
+    color: #fff;"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
                   </div>
               </div>
           </div>
